--- a/R_pkg/NAMESPACE
+++ b/R_pkg/NAMESPACE
@@ -3,3 +3,10 @@
 export(component_aashind)
 export(getAndCacheCalculation)
 export(ptf_aashind)
+export(saxton_1986_K)
+export(saxton_1986_Ksat)
+export(saxton_1986_theta_s)
+importFrom(aqp,horizons)
+importFrom(aqp,profileApply)
+importFrom(soilDB,fetchNASIS)
+importFrom(soilDB,get)
