--- a/R_pkg/DESCRIPTION
+++ b/R_pkg/DESCRIPTION
@@ -14,5 +14,5 @@ URL: https://github.com/ncss-tech/pedotransfR/R_pkg
 BugReports: https://github.com/ncss-tech/pedotransfR/issues
 Imports: 
 Suggests: 
-    testthat, RODBC
-RoxygenNote: 6.1.1
+    testthat
+RoxygenNote: 7.1.1
